sort.basic.lessons.sort.basic.selection.AlgSelectionSort.scala.error
AlgSelectionSort:11: error: not found: value currentmin
			if (plusPetitQue(j, currentmin))
                                            ^