sort.basic.lessons.sort.basic.selection.AlgSelectionSort.scala.code
def selectionSort() {

	var currentMin = getValeur(0);
	var rank = 0;
	
	for ( i <- 0 to getNombreValeurs - 1)
	{
		for ( j <- 0 to getNombreValeurs - 1)
		{
			if (plusPetitQue(j, currentmin))
			{
				currentMin = getValeur(j);
				rank = j;
			}

			

			
		}
	}
}
